--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -8657,7 +8657,6 @@ header .wsus__call_text a:hover {
 /* product start */
 .wsus__new,
 .wsus__minus {
-  width: 50px;
   border-radius: 30px;
   opacity: 0.3;
   transition: all linear 0.3s;
@@ -9466,5 +9465,65 @@ a:not([href]):not([class]):hover {
 }
 .form-switch {
     padding-left: 3.5em !important;
-  }
+}
 
+
+.page-item.disabled > .page-link {
+    width: 35px;
+  height: 35px;
+  padding: 0;
+  text-align: center;
+  line-height: 35px;
+  font-size: 13px;
+  font-weight: 400;
+  transition: all linear 0.3s;
+  -webkit-transition: all linear 0.3s;
+  -moz-transition: all linear 0.3s;
+  -ms-transition: all linear 0.3s;
+  -o-transition: all linear 0.3s;
+  border-radius: 50%;
+  border: 1px solid #08C;
+  margin-right: 10px;
+}
+
+
+.page-item > .page-link{
+    width: 35px;
+  height: 35px;
+  padding: 0;
+  text-align: center;
+  line-height: 35px;
+  font-size: 13px;
+  font-weight: 400;
+  transition: all linear 0.3s;
+  -webkit-transition: all linear 0.3s;
+  -moz-transition: all linear 0.3s;
+  -ms-transition: all linear 0.3s;
+  -o-transition: all linear 0.3s;
+  border-radius: 100% !important;
+  border: 1px solid #08C;
+  margin-right: 10px;
+}
+
+.page-item.active > .page-link{
+    width: 35px;
+  height: 35px;
+  padding: 0;
+  text-align: center;
+  line-height: 35px;
+  font-size: 13px;
+  font-weight: 400;
+  transition: all linear 0.3s;
+  -webkit-transition: all linear 0.3s;
+  -moz-transition: all linear 0.3s;
+  -ms-transition: all linear 0.3s;
+  -o-transition: all linear 0.3s;
+  border-radius: 50%;
+  border: 1px solid #08C;
+  margin-right: 10px;
+}
+.page-link:hover {
+    z-index: 2;
+    background: #08C;
+    color: #fff;
+  }
