showing product data in shopping cart page and set quantity of product dynamic in cart & make price total amount dynamic

--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -9527,3 +9527,15 @@ a:not([href]):not([class]):hover {
     background: #08C;
     color: #fff;
   }
+
+.product_qty_wraper {
+    display: flex;
+  }
+
+  .product_qty_wraper > .product-qty {
+    width: 45px;
+    height: 40px;
+    padding-left: 15px;
+    margin-left: 8px;
+    margin-right: 8px;
+  }
