--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -9539,3 +9539,8 @@ a:not([href]):not([class]):hover {
     margin-left: 8px;
     margin-right: 8px;
   }
+
+  .wsus__mini_cart .wsus__cart_img img {
+    height: 70px;
+    object-fit: cover;
+  }
