--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -9548,3 +9548,26 @@ a:not([href]):not([class]):hover {
   #card-element {
     padding: 15px;
   }
+
+  .add_cart_two{
+    position: static;
+  padding: 0px 19px;
+  font-size: 16px;
+  width: auto;
+  height: 40px;
+  color: #08C;
+  border: 1px solid #08C;
+  background: #fff;
+  margin-right: 5px;
+  }
+  .add_cart_two:hover{
+
+  color: #fff;
+  border: 1px solid #08C;
+  background: #08C;
+  transition: all linear 0.3s;
+  -webkit-transition: all linear 0.3s ease;
+  -moz-transition: all linear 0.3s ease;
+  -ms-transition: all linear 0.3s ease;
+  -o-transition: all linear 0.3s ease;
+  }
